force-app/main/default/objects/Messenger_Configuration__mdt/Messenger_Configuration__mdt.object-meta.xml
<CustomObject>
    <label>Messenger Configuration</label>
    <pluralLabel>Messenger Configurations</pluralLabel>
</CustomObject>