force-app/main/default/objects/Messenger_Configuration__mdt/fields/Confirmation_Message__c.field-meta.xml
<CustomField>
    <fullName>Confirmation_Message__c</fullName>
    <label>Confirmation Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>