force-app/main/default/objects/Messenger_Configuration__mdt/fields/ISO3_Code__c.field-meta.xml
<CustomField>
    <fullName>ISO3_Code__c</fullName>
    <label>ISO3 Code</label>
    <length>3</length>
    <type>Text</type>
</CustomField>