force-app/main/default/objects/Messenger_Configuration__mdt/fields/value__c.field-meta.xml
<CustomField>
    <fullName>value__c</fullName>
    <label>value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>